public/css/styles.css
.mt-10 {
    margin-top: 10 !important;
  }
  .p-3 {
    padding: 10 !important;
  }
  
  body {
    background-color: #E6E6FA;
  }

  .btn:hover{
    background-image:none !important;
    background-color: royalblue !important;
    border: royalblue !important;
    font-weight: bolder !important;
    color: white !important; 
  }

  .nav-item:hover{
    text-decoration: underline;
  }

  a{
    text-decoration:none
  }

  .btn{
    background-color: rgba(124, 174, 224, 0.87);
    border-color: rgba(124, 174, 224, 0.87);
  }

  .logout {
    background-color: rgba(153, 143, 143, 0.52);
    border: rgba(153, 143, 143, 0.52);
  }

  .logout:hover{
    background-image:none !important;
    background-color: rgba(206, 81, 97, 0.767) !important;
    border: rgba(206, 81, 97, 0.767) !important;
  }

  .default-bg {
    background-image: url('./../../images/bg.jpg'); 
    background-repeat: no-repeat;
    background-size: cover;
    height:100%;
  }

  .pages{
    background-image: url('./../images/bg.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    height: 500px;
  }

.p_logout{
  padding-right: 1cm;
}


* {
  box-sizing: border-box;
}
  

